adding a few more photos to carousel

--- a/designs.html
+++ b/designs.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=190708877"/>
-  <link rel="stylesheet" type="text/css" href="css/designs.css?crc=4235072722" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/designs.css?crc=317523855" id="pagesheet"/>
    </head>
  <body>
 
@@ -46,6 +46,20 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <div class="grpelem" id="u522"><!-- simple frame --></div>
       </div>
+      <div class="clearfix colelem" id="pu598"><!-- group -->
+       <div class="clearfix grpelem" id="u598"><!-- group -->
+        <div class="pointer_cursor clearfix grpelem" id="u599"><!-- group -->
+         <a class="block" href="index.html"><!-- Block link tag --></a>
+         <a class="nonblock nontext clearfix grpelem" id="u600-4" href="index.html"><!-- content --><p>Home</p></a>
+        </div>
+       </div>
+       <div class="clearfix grpelem" id="u607"><!-- group -->
+        <div class="pointer_cursor clearfix grpelem" id="u608"><!-- group -->
+         <a class="block" href="photos.html"><!-- Block link tag --></a>
+         <a class="nonblock nontext clearfix grpelem" id="u609-4" href="photos.html"><!-- content --><p>Photos</p></a>
+        </div>
+       </div>
+      </div>
      </div>
     </div>
    </div>
@@ -63,7 +77,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div id="u353"><!-- simple frame --></div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="464" data-content-above-spacer="2673" data-content-below-spacer="2209" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="531" data-content-above-spacer="1382" data-content-below-spacer="851" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
