--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@ overflow-x:hidden;
         </div>
        </div>
        <div class="clearfix colelem" id="u319"><!-- group -->
-        <div class="clearfix grpelem" id="u247"><!-- group -->
-         <div class="clearfix grpelem" id="u297-4"><!-- content -->
-          <p>Résumé</p>
-         </div>
+        <div class="pointer_cursor clearfix grpelem" id="u247"><!-- group -->
+         <a class="block" href="assets/swanson-resume.pdf"><!-- Block link tag --></a>
+         <a class="nonblock nontext clearfix grpelem" id="u297-4" href="assets/swanson-resume.pdf"><!-- content --><p>Résumé</p></a>
         </div>
        </div>
        <div class="clearfix colelem" id="u316"><!-- group -->
