--- a/photos.html
+++ b/photos.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=190708877"/>
-  <link rel="stylesheet" type="text/css" href="css/photos.css?crc=3973517594" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/photos.css?crc=490946482" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
@@ -45,10 +45,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 background-image:url( assets/edcf-3b7f-f5b3-9c0e.jpg);
 }
 #item-2 {
-background-image:url(  );
+background-image:url( assets/img_0728.jpg);
 }
 #item-3 {
-background-image:url(  );
+background-image:url( assets/img_0727.jpg);
 }
 #item-4 {
 background-image:url(  );
@@ -141,7 +141,7 @@ background-image:url( );
      <div id="u353"><!-- simple frame --></div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="659" data-content-above-spacer="2673" data-content-below-spacer="2013" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="643" data-content-above-spacer="1382" data-content-below-spacer="739" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
