--- a/photos.html
+++ b/photos.html
@@ -117,10 +117,9 @@ background-image:url( );
         </div>
        </div>
        <div class="clearfix grpelem" id="u583"><!-- group -->
-        <div class="clearfix grpelem" id="u584"><!-- group -->
-         <div class="clearfix grpelem" id="u585-4"><!-- content -->
-          <p>Designs</p>
-         </div>
+        <div class="pointer_cursor clearfix grpelem" id="u584"><!-- group -->
+         <a class="block" href="designs.html"><!-- Block link tag --></a>
+         <a class="nonblock nontext clearfix grpelem" id="u585-4" href="designs.html"><!-- content --><p>Designs</p></a>
         </div>
        </div>
       </div>
