fully responsive landing page

--- a/evans-scholars.html
+++ b/evans-scholars.html
@@ -30,12 +30,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="browser_width" id="u489-bw">
      <div id="u489"><!-- simple frame --></div>
     </div>
-    <div class="clearfix" id="u345-4"><!-- content -->
-     <p>Cory Swanson</p>
-    </div>
-    <div class="clearfix" id="u346-4"><!-- content -->
-     <p>Graphic Design</p>
-    </div>
+    <a class="nonblock nontext clearfix" id="u345-4" href="index.html"><!-- content --><p>Cory Swanson</p></a>
+    <a class="nonblock nontext clearfix" id="u346-4" href="index.html"><!-- content --><p>Graphic Design</p></a>
     <div class="browser_width" id="u353-bw">
      <div id="u353"><!-- simple frame --></div>
     </div>
