--- a/swanson-paint-co.html
+++ b/swanson-paint-co.html
@@ -11,62 +11,20 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "designs.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "swanson-paint-co.css"], "outOfDate":[]};
 </script>
   
-  <title>Designs</title>
+  <title>Swanson Paint Co</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=190708877"/>
-  <link rel="stylesheet" type="text/css" href="css/designs.css?crc=4272656949" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/swanson-paint-co.css?crc=177677076" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
    <div class="browser_width grpelem" id="u344-bw">
-    <div id="u344"><!-- column -->
-     <div class="clearfix" id="u344_align_to_page">
-      <div class="clearfix colelem" id="u480"><!-- group -->
-       <div class="clearfix grpelem" id="u481"><!-- group -->
-        <div class="clearfix grpelem" id="u482-4"><!-- content -->
-         <p>Designs</p>
-        </div>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="pu1121"><!-- group -->
-       <div class="clearfix grpelem" id="u1121"><!-- group -->
-        <div class="pointer_cursor clearfix grpelem" id="u519"><!-- group -->
-         <a class="block" href="evans-scholars.html"><!-- Block link tag --></a>
-         <div class="clearfix grpelem" id="u550"><!-- column -->
-          <a class="nonblock nontext clip_frame colelem" id="u540" href="evans-scholars.html"><!-- image --><img class="block" id="u540_img" src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="156" data-image-height="156"/></a>
-          <a class="nonblock nontext clearfix colelem" id="u537-4" href="evans-scholars.html"><!-- content --><p>Evans Scholars</p></a>
-         </div>
-        </div>
-       </div>
-       <div class="clearfix grpelem" id="u1118"><!-- group -->
-        <a class="nonblock nontext clip_frame grpelem" id="u1102" href="swanson-paint-co.html"><!-- image --><img class="block" id="u1102_img" src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.0897435897435896" data-image-width="156" data-image-height="170"/></a>
-        <div class="pointer_cursor clearfix grpelem" id="u522"><!-- group -->
-         <a class="block" href="swanson-paint-co.html"><!-- Block link tag --></a>
-         <a class="nonblock nontext clearfix grpelem" id="u1115-4" href="swanson-paint-co.html"><!-- content --><p>Swanson Paint Co.</p></a>
-        </div>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="pu598"><!-- group -->
-       <div class="clearfix grpelem" id="u598"><!-- group -->
-        <div class="pointer_cursor clearfix grpelem" id="u599"><!-- group -->
-         <a class="block" href="index.html"><!-- Block link tag --></a>
-         <a class="nonblock nontext clearfix grpelem" id="u600-4" href="index.html"><!-- content --><p>Home</p></a>
-        </div>
-       </div>
-       <div class="clearfix grpelem" id="u607"><!-- group -->
-        <div class="pointer_cursor clearfix grpelem" id="u608"><!-- group -->
-         <a class="block" href="photos.html"><!-- Block link tag --></a>
-         <a class="nonblock nontext clearfix grpelem" id="u609-4" href="photos.html"><!-- content --><p>Photos</p></a>
-        </div>
-       </div>
-      </div>
-     </div>
-    </div>
+    <div id="u344"><!-- simple frame --></div>
    </div>
    <div class="clearfix grpelem" id="pu489"><!-- group -->
     <div class="browser_width" id="u489-bw">
@@ -78,7 +36,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div id="u353"><!-- simple frame --></div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="531" data-content-above-spacer="1382" data-content-below-spacer="851" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="1382" data-content-below-spacer="1382" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
