first attempt at fully responsive designs page

--- a/designs.html
+++ b/designs.html
@@ -11,74 +11,165 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "designs.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "designs.css"], "outOfDate":[]};
 </script>
   
   <title>Designs</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=190708877"/>
-  <link rel="stylesheet" type="text/css" href="css/designs.css?crc=4272656949" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=3913094672"/>
+  <link rel="stylesheet" type="text/css" href="css/designs.css?crc=104507408" id="pagesheet"/>
+  <!-- IE-only CSS -->
+  <!--[if lt IE 9]>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_formal.css?crc=3940659496"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_designs.css?crc=4167775617" id="nomq_pagesheet"/>
+  <![endif]-->
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="browser_width grpelem" id="u344-bw">
-    <div id="u344"><!-- column -->
-     <div class="clearfix" id="u344_align_to_page">
-      <div class="clearfix colelem" id="u480"><!-- group -->
-       <div class="clearfix grpelem" id="u481"><!-- group -->
-        <div class="clearfix grpelem" id="u482-4"><!-- content -->
-         <p>Designs</p>
-        </div>
-       </div>
-      </div>
-      <div class="clearfix colelem" id="pu1121"><!-- group -->
-       <div class="clearfix grpelem" id="u1121"><!-- group -->
-        <div class="pointer_cursor clearfix grpelem" id="u519"><!-- group -->
-         <a class="block" href="evans-scholars.html"><!-- Block link tag --></a>
-         <div class="clearfix grpelem" id="u550"><!-- column -->
-          <a class="nonblock nontext clip_frame colelem" id="u540" href="evans-scholars.html"><!-- image --><img class="block" id="u540_img" src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="156" data-image-height="156"/></a>
-          <a class="nonblock nontext clearfix colelem" id="u537-4" href="evans-scholars.html"><!-- content --><p>Evans Scholars</p></a>
+  <div class="breakpoint active" id="bp_infinity" data-min-width="731"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox" id="page"><!-- group -->
+    <div class="browser_width grpelem" id="u344-bw">
+     <div id="u344"><!-- column -->
+      <div class="clearfix" id="u344_align_to_page">
+       <div class="clearfix colelem shared_content" id="u480" data-content-guid="u480_content"><!-- group -->
+        <div class="clearfix grpelem" id="u481"><!-- group -->
+         <div class="clearfix grpelem" id="u482-4"><!-- content -->
+          <p id="u482-2">Designs</p>
          </div>
         </div>
        </div>
-       <div class="clearfix grpelem" id="u1118"><!-- group -->
-        <a class="nonblock nontext clip_frame grpelem" id="u1102" href="swanson-paint-co.html"><!-- image --><img class="block" id="u1102_img" src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.0897435897435896" data-image-width="156" data-image-height="170"/></a>
+       <div class="clearfix colelem" id="pu519"><!-- group -->
+        <div class="pointer_cursor clearfix grpelem" id="u519"><!-- group -->
+         <a class="block shared_content" href="evans-scholars.html" data-content-guid="u519_0_content"><!-- Block link tag --></a>
+         <div class="clearfix grpelem" id="u2168"><!-- column -->
+          <a class="nonblock nontext clip_frame colelem" id="u540" href="evans-scholars.html"><!-- image --><img class="block temp_no_img_src" id="u540_img" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="156" data-image-height="156" src="images/blank.gif?crc=4208392903"/></a>
+          <a class="nonblock nontext clearfix colelem shared_content" id="u537-4" href="evans-scholars.html" data-content-guid="u537-4_content"><!-- content --><p id="u537-2">Evans Scholars</p></a>
+         </div>
+        </div>
         <div class="pointer_cursor clearfix grpelem" id="u522"><!-- group -->
-         <a class="block" href="swanson-paint-co.html"><!-- Block link tag --></a>
-         <a class="nonblock nontext clearfix grpelem" id="u1115-4" href="swanson-paint-co.html"><!-- content --><p>Swanson Paint Co.</p></a>
+         <a class="block shared_content" href="swanson-paint-co.html" data-content-guid="u522_0_content"><!-- Block link tag --></a>
+         <div class="clearfix grpelem" id="u2163"><!-- column -->
+          <a class="nonblock nontext clip_frame colelem" id="u1102" href="swanson-paint-co.html"><!-- image --><img class="block temp_no_img_src" id="u1102_img" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.087248322147651" data-image-width="149" data-image-height="162" src="images/blank.gif?crc=4208392903"/></a>
+          <a class="nonblock nontext clearfix colelem shared_content" id="u1115-4" href="swanson-paint-co.html" data-content-guid="u1115-4_content"><!-- content --><p id="u1115-2">Swanson Paint Co.</p></a>
+         </div>
         </div>
        </div>
-      </div>
-      <div class="clearfix colelem" id="pu598"><!-- group -->
-       <div class="clearfix grpelem" id="u598"><!-- group -->
-        <div class="pointer_cursor clearfix grpelem" id="u599"><!-- group -->
-         <a class="block" href="index.html"><!-- Block link tag --></a>
-         <a class="nonblock nontext clearfix grpelem" id="u600-4" href="index.html"><!-- content --><p>Home</p></a>
+       <div class="clearfix colelem shared_content" id="pu598" data-content-guid="pu598_content"><!-- group -->
+        <div class="clearfix grpelem" id="u598"><!-- group -->
+         <div class="pointer_cursor clearfix grpelem" id="u599"><!-- group -->
+          <a class="block" href="index.html"><!-- Block link tag --></a>
+          <a class="nonblock nontext clearfix grpelem" id="u600-4" href="index.html"><!-- content --><p id="u600-2">Home</p></a>
+         </div>
         </div>
-       </div>
-       <div class="clearfix grpelem" id="u607"><!-- group -->
-        <div class="pointer_cursor clearfix grpelem" id="u608"><!-- group -->
-         <a class="block" href="photos.html"><!-- Block link tag --></a>
-         <a class="nonblock nontext clearfix grpelem" id="u609-4" href="photos.html"><!-- content --><p>Photos</p></a>
+        <div class="clearfix grpelem" id="u607"><!-- group -->
+         <div class="pointer_cursor clearfix grpelem" id="u608"><!-- group -->
+          <a class="block" href="photos.html"><!-- Block link tag --></a>
+          <a class="nonblock nontext clearfix grpelem" id="u609-4" href="photos.html"><!-- content --><p id="u609-2">Photos</p></a>
+         </div>
         </div>
        </div>
       </div>
      </div>
     </div>
-   </div>
-   <div class="clearfix grpelem" id="pu489"><!-- group -->
-    <div class="browser_width" id="u489-bw">
-     <div id="u489"><!-- simple frame --></div>
+    <div class="clearfix grpelem shared_content" id="pu489" data-content-guid="pu489_content"><!-- group -->
+     <div class="browser_width" id="u489-bw">
+      <div id="u489"><!-- simple frame --></div>
+     </div>
+     <a class="nonblock nontext clearfix" id="u345-4" href="index.html"><!-- content --><p id="u345-2">Cory Swanson</p></a>
+     <a class="nonblock nontext clearfix" id="u346-4" href="index.html"><!-- content --><p id="u346-2">Graphic Design</p></a>
+     <div class="browser_width" id="u353-bw">
+      <div id="u353"><!-- simple frame --></div>
+     </div>
     </div>
-    <a class="nonblock nontext clearfix" id="u345-4" href="index.html"><!-- content --><p>Cory Swanson</p></a>
-    <a class="nonblock nontext clearfix" id="u346-4" href="index.html"><!-- content --><p>Graphic Design</p></a>
-    <div class="browser_width" id="u353-bw">
-     <div id="u353"><!-- simple frame --></div>
-    </div>
+    <div class="verticalspacer" data-offset-top="523" data-content-above-spacer="1382" data-content-below-spacer="859" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
-   <div class="verticalspacer" data-offset-top="531" data-content-above-spacer="1382" data-content-below-spacer="851" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+  </div>
+  <div class="breakpoint" id="bp_730" data-min-width="601" data-max-width="730"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="browser_width grpelem temp_no_id" data-orig-id="u344-bw">
+     <div class="temp_no_id" data-orig-id="u344"><!-- column -->
+      <div class="clearfix temp_no_id" data-orig-id="u344_align_to_page">
+       <span class="clearfix colelem placeholder" data-placeholder-for="u480_content"><!-- placeholder node --></span>
+       <div class="clearfix colelem temp_no_id" data-orig-id="pu519"><!-- group -->
+        <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u519"><!-- group -->
+         <span class="block placeholder" data-placeholder-for="u519_0_content"><!-- placeholder node --></span>
+         <div class="clearfix grpelem temp_no_id" data-orig-id="u2168"><!-- column -->
+          <a class="nonblock nontext clip_frame colelem temp_no_id" href="evans-scholars.html" data-orig-id="u540"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="119" data-image-height="119" data-orig-id="u540_img" src="images/blank.gif?crc=4208392903"/></a>
+          <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u537-4_content"><!-- placeholder node --></span>
+         </div>
+        </div>
+        <div class="pointer_cursor clearfix grpelem temp_no_id" data-orig-id="u522"><!-- group -->
+         <span class="block placeholder" data-placeholder-for="u522_0_content"><!-- placeholder node --></span>
+         <div class="clearfix grpelem temp_no_id" data-orig-id="u2163"><!-- column -->
+          <a class="nonblock nontext clip_frame colelem temp_no_id" href="swanson-paint-co.html" data-orig-id="u1102"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.084033613445378" data-image-width="119" data-image-height="129" data-orig-id="u1102_img" src="images/blank.gif?crc=4208392903"/></a>
+          <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u1115-4_content"><!-- placeholder node --></span>
+         </div>
+        </div>
+       </div>
+       <span class="clearfix colelem placeholder" data-placeholder-for="pu598_content"><!-- placeholder node --></span>
+      </div>
+     </div>
+    </div>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu489_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="486" data-content-above-spacer="1015" data-content-below-spacer="529" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   </div>
+  </div>
+  <div class="breakpoint" id="bp_600" data-min-width="501" data-max-width="600"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="browser_width grpelem temp_no_id" data-orig-id="u344-bw">
+     <div class="temp_no_id" data-orig-id="u344"><!-- column -->
+      <div class="clearfix temp_no_id" data-orig-id="u344_align_to_page">
+       <span class="clearfix colelem placeholder" data-placeholder-for="u480_content"><!-- placeholder node --></span>
+       <div class="pointer_cursor clearfix colelem temp_no_id" data-orig-id="u519"><!-- group -->
+        <span class="block placeholder" data-placeholder-for="u519_0_content"><!-- placeholder node --></span>
+        <div class="clearfix grpelem temp_no_id" data-orig-id="u2168"><!-- column -->
+         <a class="nonblock nontext clip_frame colelem temp_no_id" href="evans-scholars.html" data-orig-id="u540"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="98" data-image-height="98" data-orig-id="u540_img" src="images/blank.gif?crc=4208392903"/></a>
+         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u537-4_content"><!-- placeholder node --></span>
+        </div>
+       </div>
+       <div class="pointer_cursor clearfix colelem temp_no_id" data-orig-id="u522"><!-- group -->
+        <span class="block placeholder" data-placeholder-for="u522_0_content"><!-- placeholder node --></span>
+        <div class="clearfix grpelem temp_no_id" data-orig-id="u2163"><!-- column -->
+         <a class="nonblock nontext clip_frame colelem temp_no_id" href="swanson-paint-co.html" data-orig-id="u1102"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.092783505154639" data-image-width="97" data-image-height="106" data-orig-id="u1102_img" src="images/blank.gif?crc=4208392903"/></a>
+         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u1115-4_content"><!-- placeholder node --></span>
+        </div>
+       </div>
+       <span class="clearfix colelem placeholder" data-placeholder-for="pu598_content"><!-- placeholder node --></span>
+      </div>
+     </div>
+    </div>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu489_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="673" data-content-above-spacer="918" data-content-below-spacer="244" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   </div>
+  </div>
+  <div class="breakpoint" id="bp_500" data-max-width="500"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <div class="browser_width grpelem temp_no_id" data-orig-id="u344-bw">
+     <div class="temp_no_id" data-orig-id="u344"><!-- column -->
+      <div class="clearfix temp_no_id" data-orig-id="u344_align_to_page">
+       <span class="clearfix colelem placeholder" data-placeholder-for="u480_content"><!-- placeholder node --></span>
+       <div class="pointer_cursor clearfix colelem temp_no_id" data-orig-id="u519"><!-- group -->
+        <span class="block placeholder" data-placeholder-for="u519_0_content"><!-- placeholder node --></span>
+        <div class="clearfix grpelem temp_no_id" data-orig-id="u2168"><!-- column -->
+         <a class="nonblock nontext clip_frame colelem temp_no_id" href="evans-scholars.html" data-orig-id="u540"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/evans%20es.png?crc=93571438" alt="" data-heightwidthratio="1" data-image-width="81" data-image-height="81" data-orig-id="u540_img" src="images/blank.gif?crc=4208392903"/></a>
+         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u537-4_content"><!-- placeholder node --></span>
+        </div>
+       </div>
+       <div class="pointer_cursor clearfix colelem temp_no_id" data-orig-id="u522"><!-- group -->
+        <span class="block placeholder" data-placeholder-for="u522_0_content"><!-- placeholder node --></span>
+        <div class="clearfix grpelem temp_no_id" data-orig-id="u2163"><!-- column -->
+         <a class="nonblock nontext clip_frame colelem temp_no_id" href="swanson-paint-co.html" data-orig-id="u1102"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/swanson%20paint%20co%20brush.png?crc=268342375" alt="" data-heightwidthratio="1.0987654320987654" data-image-width="81" data-image-height="89" data-orig-id="u1102_img" src="images/blank.gif?crc=4208392903"/></a>
+         <span class="nonblock nontext clearfix colelem placeholder" data-placeholder-for="u1115-4_content"><!-- placeholder node --></span>
+        </div>
+       </div>
+       <span class="clearfix colelem placeholder" data-placeholder-for="pu598_content"><!-- placeholder node --></span>
+      </div>
+     </div>
+    </div>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu489_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="639" data-content-above-spacer="1015" data-content-below-spacer="375" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   </div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -91,7 +182,7 @@ var suppressMissingFileError = false
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){f(!0)},5E3):f()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(c){var $ = c;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.museresponsive"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
@@ -99,7 +190,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.showWidgetsWhenReady();/* body */
+$( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
 
