--- a/swanson-paint-co.html
+++ b/swanson-paint-co.html
@@ -11,32 +11,56 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "swanson-paint-co.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.museresponsive.js", "require.js", "swanson-paint-co.css"], "outOfDate":[]};
 </script>
   
   <title>Swanson Paint Co</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=190708877"/>
-  <link rel="stylesheet" type="text/css" href="css/swanson-paint-co.css?crc=177677076" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_formal.css?crc=3913094672"/>
+  <link rel="stylesheet" type="text/css" href="css/swanson-paint-co.css?crc=128888692" id="pagesheet"/>
+  <!-- IE-only CSS -->
+  <!--[if lt IE 9]>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_formal.css?crc=3940659496"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_swanson-paint-co.css?crc=3955117439" id="nomq_pagesheet"/>
+  <![endif]-->
    </head>
  <body>
 
-  <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="browser_width grpelem" id="u344-bw">
-    <div id="u344"><!-- simple frame --></div>
-   </div>
-   <div class="clearfix grpelem" id="pu489"><!-- group -->
-    <div class="browser_width" id="u489-bw">
-     <div id="u489"><!-- simple frame --></div>
+  <div class="breakpoint active" id="bp_infinity" data-min-width="731"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox" id="page"><!-- group -->
+    <div class="browser_width grpelem shared_content" id="u344-bw" data-content-guid="u344-bw_content">
+     <div id="u344"><!-- simple frame --></div>
     </div>
-    <a class="nonblock nontext clearfix" id="u345-4" href="index.html"><!-- content --><p>Cory Swanson</p></a>
-    <a class="nonblock nontext clearfix" id="u346-4" href="index.html"><!-- content --><p>Graphic Design</p></a>
-    <div class="browser_width" id="u353-bw">
-     <div id="u353"><!-- simple frame --></div>
+    <div class="clearfix grpelem shared_content" id="pu489" data-content-guid="pu489_content"><!-- group -->
+     <div class="browser_width" id="u489-bw">
+      <div id="u489"><!-- simple frame --></div>
+     </div>
+     <a class="nonblock nontext clearfix" id="u345-4" href="index.html"><!-- content --><p id="u345-2">Cory Swanson</p></a>
+     <a class="nonblock nontext clearfix" id="u346-4" href="index.html"><!-- content --><p id="u346-2">Graphic Design</p></a>
+     <div class="browser_width" id="u353-bw">
+      <div id="u353"><!-- simple frame --></div>
+     </div>
     </div>
+    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="1382" data-content-below-spacer="1382" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="1382" data-content-below-spacer="1382" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+  </div>
+  <div class="breakpoint" id="bp_730" data-min-width="601" data-max-width="730"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id shared_content" data-orig-id="page" data-content-guid="page_content"><!-- group -->
+    <span class="browser_width grpelem placeholder" data-placeholder-for="u344-bw_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu489_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="1015" data-content-below-spacer="1015" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   </div>
+  </div>
+  <div class="breakpoint" id="bp_600" data-min-width="501" data-max-width="600"><!-- responsive breakpoint node -->
+   <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
+    <span class="browser_width grpelem placeholder" data-placeholder-for="u344-bw_content"><!-- placeholder node --></span>
+    <span class="clearfix grpelem placeholder" data-placeholder-for="pu489_content"><!-- placeholder node --></span>
+    <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="918" data-content-below-spacer="918" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   </div>
+  </div>
+  <div class="breakpoint" id="bp_500" data-max-width="500"><!-- responsive breakpoint node -->
+   <span class="clearfix borderbox placeholder" data-placeholder-for="page_content"><!-- placeholder node --></span>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -49,7 +73,7 @@ var suppressMissingFileError = false
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Some files on the server may be missing or incorrect. Clear browser cache and try again. If the problem persists please contact website author.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){f(!0)},5E3):f()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch"],function(c){var $ = c;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.watch","jquery.museresponsive"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
@@ -57,7 +81,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-Muse.Utils.showWidgetsWhenReady();/* body */
+$( '.breakpoint' ).registerBreakpoint();/* Register breakpoints */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
 
